// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton renders correctly when disabled 1`] = `
<button
  class="flex items-center gap-x-2 rounded-full font-semibold h-fit shadow-button border text-sm cursor-not-allowed p-2.5 bg-primary-700 text-white border-transparent hover:bg-primary-800 focus:shadow-button-focused-primary disabled:bg-primary-400"
  disabled=""
  type="button"
>
  Click me
</button>
`;

exports[`IconButton renders correctly with children 1`] = `
<button
  class="flex items-center gap-x-2 rounded-full font-semibold h-fit shadow-button border text-sm p-2.5 bg-primary-700 text-white border-transparent hover:bg-primary-800 focus:shadow-button-focused-primary disabled:bg-primary-400"
  type="button"
>
  Click me
</button>
`;

exports[`IconButton renders correctly with color 1`] = `
<button
  class="flex items-center gap-x-2 rounded-full font-semibold h-fit shadow-button border text-sm p-2.5 bg-primary-700 text-white border-transparent hover:bg-primary-800 focus:shadow-button-focused-primary disabled:bg-primary-400"
  type="button"
>
  Click me
</button>
`;

exports[`IconButton renders correctly with custom class name 1`] = `
<button
  class="flex items-center gap-x-2 rounded-full font-semibold h-fit shadow-button border text-sm p-2.5 bg-primary-700 text-white border-transparent hover:bg-primary-800 focus:shadow-button-focused-primary disabled:bg-primary-400 custom-class"
  type="button"
>
  Click me
</button>
`;

exports[`IconButton renders correctly with size 1`] = `
<button
  class="flex items-center gap-x-2 rounded-full font-semibold h-fit shadow-button border text-base p-3 bg-primary-700 text-white border-transparent hover:bg-primary-800 focus:shadow-button-focused-primary disabled:bg-primary-400"
  type="button"
>
  Click me
</button>
`;

exports[`IconButton renders correctly with variant 1`] = `
<button
  class="flex items-center gap-x-2 rounded-full font-semibold h-fit shadow-button border text-sm p-2.5 bg-white text-primary-700 border-primary-300 hover:bg-primary-100 focus:shadow-button-focused-primary disabled:text-primary-400 disabled:bg-white"
  type="button"
>
  Click me
</button>
`;
